# tex2img

./: LICENSE  README.md  pyproject.toml  tex2img.py
tex2img/: __init__.py  cli.py  tex2img.py
